Bugfixing menu icon safari mobile

--- a/PhoneSize.css
+++ b/PhoneSize.css
@@ -61,7 +61,6 @@
         padding: 15px;
         font-size: 10px;
         border: none;
-        cursor: pointer;
         -webkit-transition: all 1s ease-in-out;
         -moz-transition: all 1s ease-in-out;
         -ms-transition: all 1s ease-in-out;
