--- a/generalsettings.css
+++ b/generalsettings.css
@@ -28,14 +28,8 @@
         overflow-x: hidden !important;
         overflow-y: visible;
         border: inset rgba(0,0,0,1) 2px;
-        /*display: -webkit-flex;*/
-        /*display: flex;*/
-        /*!*-webkit-flex-direction: column; !* works with row or column *!*!*/
-        /*!*flex-direction: column;*!*/
-        /*-webkit-align-items: center;*/
-        /*align-items: center;*/
-        /*-webkit-justify-content: center;*/
-        /*justify-content: center;*/
+        max-height: 400px;
+        max-width: 800px;
     }
 
     /*.middle-of-div {*/
@@ -86,6 +80,22 @@
 
     #dropbutton {
         z-index: 20;
+    }
+
+    #dropbotton {
+        position: fixed;
+        display: block !important;
+        position: fixed;
+        top: 0;
+        left: 200px;
+        background: url("images/menu_icon.png");
+        background-color: #E80000;
+        background-size: 100%;
+        color: white;
+        padding: 15px;
+        font-size: 10px;
+        border: none;
+
     }
 
     @media only screen and(max-width: 500px){
@@ -281,7 +291,7 @@
 
     ​
     #menubar {
-        visibility: hidden;
+        visibility: visible;
         color: white;
     }
 
